# VetClinicBack

./: README.md  pyproject.toml  requirements.txt
accounts/: admin.py  urls.py
accounts/migrations/: 0001_initial.py
accounts/models/: __init__.py  users.py
accounts/perms/: users.py
accounts/serializers/: auth.py  users.py
accounts/views/: auth.py  users.py
common/: models.py
common/utils/: auth.py  passwords.py
nomenclatures/: admin.py  models.py  perms.py  serializers.py  urls.py  views.py
nomenclatures/migrations/: 0001_initial.py
vetclinic/: settings.py  urls.py
