[project]
name = "vetclinicback"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref==3.8.1",
    "django==5.2.1",
    "django-cors-headers==4.7.0",
    "django-filter==25.1",
    "djangorestframework==3.16.0",
    "djangorestframework-simplejwt==5.5.0",
    "pillow==11.3.0",
    "pyjwt==2.9.0",
    "python-dateutil==2.9.0.post0",
    "six==1.17.0",
    "sqlparse==0.5.3",
]
